# aurelion-refactor-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: aurelion.toml
core/: __init__.py  ai_planner.py  api.py  auth.py  dashboard.py  db.py  dependency_resolver.py  executor.py  history_manager.py  logger.py  parser.py  plan_runner.py  profile_manager.py  report_exporter.py  server.py
engines/: __init__.py  file_engine.py  rule_engine.py  text_engine.py
examples/: plan.toml
plugins/: __init__.py  line_counter.py  loader.py  manager.py
plugins/marketplace/: registry.json
profiles/: default.toml  dev.toml  prod.toml  staging.toml
utils/: __init__.py  backup.py  config.py  conflict_manager.py  diff_renderer.py  file_safety.py  prompt.py  resolver.py  rule_parser.py  state_manager.py
web/: index.html
